--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,7 @@
     <title>Chimeric Makramas</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-bottom: 10px">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Chimeric Makramas</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,11 @@
         </div>
       </div>
     </nav>
+    <div class="ui container" id='hello' style="background: rgb(24,163,195);
+    background: linear-gradient(61deg, rgba(24,163,195,1) 14%, rgba(2,142,98,1) 61%); height: 60vh; width: 100%;">
+    
+    </div>
     <div id="root"></div>
-    <h2>Django + React Connected</h2>
+    
   </body>
 </html>
