Main page adding content

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -136,9 +136,11 @@
 <div class="ui large top fixed hidden menu">
   <div class="ui container">
     <a class="active item">Home</a>
-    <a class="item">Work</a>
-    <a class="item">Company</a>
-    <a class="item">Careers</a>
+    <a class="item">O mnie</a>
+    <a class="item">Moje projekty</a>
+    <a class="item">Kontakt</a>
+    <a class="item">Jak złożyć zamówienie?</a>
+
     <div class="right menu">
       <div class="item">
         <a class="ui button">Log in</a>
@@ -153,11 +155,10 @@
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
   <a class="active item">Home</a>
-  <a class="item">Work</a>
-  <a class="item">Company</a>
-  <a class="item">Careers</a>
-  <a class="item">Login</a>
-  <a class="item">Signup</a>
+  <a class="item">O mnie</a>
+  <a class="item">Moje projekty</a>
+  <a class="item">kontakt</a>
+  <a class="item">Jak złożyć zamówienie?</a>
 </div>
 
 
@@ -172,8 +173,9 @@
         </a>
         <a class="active item">Home</a>
         <a class="item">O mnie</a>
-        <a class="item">Makramy</a>
+        <a class="item">Moje projekty</a>
         <a class="item">Kontakt</a>
+        <a class="item">Jak złożyć zamówienie?</a>
         <div class="right item">
           <a class="ui inverted button">Log in</a>
           <a class="ui inverted button">Sign Up</a>
@@ -186,11 +188,41 @@
         Chimeric Makramas
       </h1>
       <h2>Zapraszam Cię do mojego makramowego Świata.</h2>
-      <div class="ui huge primary button">Get Started <i class="right arrow icon"></i></div>
+      <div class="ui huge primary button">Moje portfolio<i class="right arrow icon"></i></div>
     </div>
   </div>    
   <div class='ui verical stripe segment'>
-    <div class="ui middle aligned" id='root'></div>
+    <div class='ui middle aligned stackable grid container'>
+      <div class="row">
+        <div class="eight wide column">
+            <h3 class="ui header">Jak zaczęła się moja przygoda z makramami?</h3>
+            <p>Poprostu nadeszła. Nieoczekiwanie. Chciałam robić coś, co będzie sprawiało mi 
+              przyjemność i pozwoli wyrazić się poprzez  kreatywność. Kiedy zobaczyłam makramy 
+              w internecie czułam, że to to i od razu zamówiłam pierwsze sznurki. 
+              Na początku nie było łatwo, a efekt nie był zadowalający, 
+              ale plotłam coraz więcej i więcej , aż w końcu zaczęły powstawać projekty, 
+              które są w całości tylko moim pomysłem. Zapraszam więc rozejrzyj się po mojej stronie, 
+              może coś Cię zainspiruje. Może znajdziesz tu makramę, która idealnie wkąponuje się do Twojego wnętrza.</p>
+            <h3 class="ui header">Historia makramy</h3>
+            <p>Makrama jest sztuką, która polega na zaplataniu artystycznych 
+              supełków bez użycia igły czy szydełka, za pomocą tylko samych dłoni.
+              Staro­żytny wschód znał pismo węzełkowe. Pierwsi żeglarze pletli łańcuszki - talizmany 
+              i przywiązywali je na czubku masztu. Inkowie w Pe­ru wiązali naszyjniki. 
+              Ich właśnie można nazwać twórcami pierwszych Słowo „makrama", jak 
+              podają źródła encyklopedyczne, jest pochodze­nia arabskiego i oznacza "ozdobne frędzle.</p>
+        </div>
+        <div class="six wide right floated column">
+            <img alt='Weronika Drozd' scr="https://semantic-ui.com/examples/assets/images/wireframe/white-image.png">
+        </div>
+      </div>
+      <div class="row">
+        <div class="center aligned column">
+          <a class="ui huge button" style="background-color: #2185d0; color: white;"> Aktualnie w sprzedaży
+            <i class="down arrow icon" style="color: white; margin: auto;"></i></a>
+        </div>
+      </div>
+    </div>
+    <div style="margin-top: 10px;" id='root'></div>
   </div>
 </div>
 
