Adding content to the page

--- a/frontend/public/informations.html
+++ b/frontend/public/informations.html
@@ -1,3 +1,10 @@
 {% extends 'index.html' %}
 {% block content %}
+    <div class="ui text container">
+      <h1 class="ui inverted header">
+        Informacje
+      </h1>
+      <h2>Wszystkie istotne informacje</h2>
+    </div>
 {% endblock %}
+
