--- a/frontend/public/portfolio.html
+++ b/frontend/public/portfolio.html
@@ -1,3 +1,9 @@
 {% extends 'index.html' %}
 {% block content %}
+    <div class="ui text container">
+      <h1 class="ui inverted header">
+        Portfolio
+      </h1>
+      <h2>Wszystkie moje projekty</h2>
+    </div>
 {% endblock %}
