--- a/frontend/public/contact.html
+++ b/frontend/public/contact.html
@@ -1,3 +1,9 @@
 {% extends 'index.html' %}
 {% block content %}
+    <div class="ui text container">
+      <h1 class="ui inverted header">
+        Kontakt
+      </h1>
+      <h2>Serdecznie zapraszam do kontaktu</h2>
+    </div>
 {% endblock %}
