Dividing components to display on different pages

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -162,7 +162,7 @@
 
 <!-- Page Contents -->
 <div class="pusher">
-  <div class="ui inverted vertical masthead center aligned segment" style="min-height: 600px;">
+  <div class="ui inverted vertical masthead center aligned segment" style="max-height: 600px;">
 
     <div class="ui container">
       <div class="ui large secondary inverted pointing menu">
