--- a/frontend/public/portfolio.html
+++ b/frontend/public/portfolio.html
@@ -5,5 +5,9 @@
         Portfolio
       </h1>
       <h2>Wszystkie moje projekty</h2>
+    <div class="ui huge primary button">Kontakt<i class="right arrow icon"></i></div>
     </div>
+    </div>
+    <div id="root"></div>
+
 {% endblock %}
