--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -252,42 +252,42 @@
                                     <div class="side">
                                         <div class="content">
                                             <div class="center">
-                                                1
+                                                <i class="ui icon chess queen" style="padding-top: 20px; font-size: 4em; transform: rotate(180deg); margin-bottom: 100px; color: #5e6472"></i>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="side">
                                         <div class="content">
                                             <div class="center">
-                                                2
+                                                <i class="ui icon chess queen" style="padding-top: 20px; font-size: 4em; transform: rotate(180deg); margin-bottom: 100px; color: #f4acb7"></i>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="side">
                                         <div class="content">
                                             <div class="center">
-                                                3
+                                                <i class="ui icon chess queen" style="padding-top: 20px; font-size: 4em; transform: rotate(180deg); margin-bottom: 100px; color: #000814"></i>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="side">
                                         <div class="content">
                                             <div class="center">
-                                                4
+                                                <i class="ui icon chess queen" style="padding-top: 20px; font-size: 4em; transform: rotate(180deg); margin-bottom: 100px; color: #ffd60a"></i>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="side">
                                         <div class="content">
                                             <div class="center">
-                                                5
+                                                <i class="ui icon chess queen" style="padding-top: 20px; font-size: 4em; transform: rotate(180deg); margin-bottom: 100px; color: #582f0e"></i>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="side active">
                                         <div class="content">
                                             <div class="center">
-                                                6
+                                                <i class="ui icon chess queen" style="padding-top: 20px; font-size: 4em; transform: rotate(180deg); margin-bottom: 100px; color: #03045e"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -295,13 +295,17 @@
                             </div>
                             <div class="ui ignored divider"></div>
                             <div class="ui ignored icon direction buttons">
-                                <div id='cube_button' class="ui button" data-animation="flip" title="Flip Left" data-direction="left"><i
+                                <div id='cube_button' class="ui button left" data-animation="flip" title="Flip Left"
+                                     data-direction="left"><i
                                         class="left long arrow icon"></i></div>
-                                <div id='cube_button' class="ui button" data-animation="flip" title="Flip Up" data-direction="up"><i
+                                <div id='cube_button' class="ui button up" data-animation="flip" title="Flip Up"
+                                     data-direction="up"><i
                                         class="up long arrow icon"></i></div>
-                                <div id='cube_button' class="ui icon button" data-animation="flip" title="Flip Down"
+                                <div id='cube_button' class="ui icon button down" data-animation="flip"
+                                     title="Flip Down"
                                      data-direction="down"><i class="down long arrow icon"></i></div>
-                                <div id='cube_button' class="ui icon button" data-animation="flip" title="Flip Right"
+                                <div id='cube_button' class="ui icon button right" data-animation="flip"
+                                     title="Flip Right"
                                      data-direction="right"><i class="right long arrow icon"></i></div>
                             </div>
                         </div>
@@ -327,6 +331,41 @@
             </div>
             </div>
         {% endblock %}
+{#<script src="https://code.jquery.com/jquery-3.1.1.min.js">#}
+{#</script>#}
+
+<!-- Include Semantic UI -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js">
+</script>
+<script>
+
+    // Initialize the shape
+    $('.shape').shape();
+
+    $('.up').click(function () {
+
+        // Make the shape flip up
+        $('.shape').shape('flip up');
+    })
+
+    $('.right').click(function () {
+
+        // Make the shape flip to the right
+        $('.shape').shape('flip right');
+    })
+
+    $('.left').click(function () {
+
+        // Make the shape flip to the left
+        $('.shape').shape('flip left');
+    })
+
+    $('.down').click(function () {
+
+        // Make the shape flip to the right
+        $('.shape').shape('flip down');
+    })
+</script>
 </body>
 </html>
 
